assets/css/style.css
body {
    font-family: 'Montserrat', sans-serif;
    background-color: #fcfcfc;
    color:#2c3336;
    font-weight: 500;
}

* { 
    box-sizing: border-box;
}

/*Responsive background images with Bootstrap 5 tutorial-------------------*/

.hero-image-main {
    background-image: url(../images/background-image.jpg);
    background-size: cover;
    min-height: 70vh;
    position: relative;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-position: center;
}

.hero-image-classes {
    background-image: url(../images/studio-class-compressed.jpg);
    background-size: cover;
    min-height: 70vh;
    position: relative;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-position: bottom;
}

.hero-image-contact {
    background-image: url(../images/cactus.jpg);
    background-size: cover;
    min-height: 70vh;
    position: relative;
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-position: center;
}

.hero-text {
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    color: #fafafa;
    transform: translate(-50%, -50%);
    background-color: rgba(0,0,0,0.3);
    padding: 25px;
    border-radius: 5px;
}

h1 { 
    font-size: 2.5rem;
}

.navbar {
    padding: 8px 20px;
    font-weight: 500;
    background-color: #fcfcfc;
}

.navbar a:hover {
    color: #0c0c0c
}

a {
    text-decoration: none;
    color:#2c3336;
}

/* Footer -------------------------------------------------------------*/

footer {
    background-color: #848c91;
    position: sticky;
    bottom: 0;
}

.socials {
    text-align: center;
    margin-bottom: 0;
}

.socials li {
    display: inline;
}

.socials i {
    color:#fafafa;
    padding: 5px;
    margin: 5px;
    font-size: 2rem;
    text-decoration: none;
}

.socials i:hover {
    color: #6c7074;
}

footer ul {
    padding-left: 0;
}

/* Home page content --------------------------------------------------*/

.home-page {
    display: block;
    column-count: 2;
    margin: 50px auto;
    width: 80%;
}

.home-page h3 {
    padding-bottom: 15px;
}

.house-picture {
    width: 100%;
    border-radius: 50%;
    padding: 0 30px;
}

.button {
    background-color: #fafafa;
    border: 1px solid #848c91;
    border-radius: 10px;
    padding: 5px;
}

.button:hover {
    background-color: #848c91;
    color: #fafafa;
}

.classes-button {
    margin-top: 50px;
}

.testimonials {
    display: block;
    column-count: 3;
    column-gap: 10px;
    width: 100%;
    height: auto;
    justify-items: center;
    margin: auto;
    color:#fcfcfc;
    padding: 0 20px;
}

#testimonials-heading {
    display: flex;
    justify-content: center;
    font-weight: 500;
    margin-bottom: 10px;
    font-style: italic;
}

.testimonials p {
    font-style: italic;
    background-color: #848c91;
    padding: 20px;
    font-weight: 500;
}

/* Classes page -------------------------------------------------------*/

h3 {
    font-size: 1.2em;
}

.class-page-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    grid-auto-rows: auto;
    gap: 20px;
    width: 90%;
    margin: 20px auto;
    overflow: hidden;
    background-color: #f1f1f1;
    padding: 30px;
}

.class-description {
    background-color: #fafafa;
    padding: 2em;
}

.class-page-grid img {
    object-fit: cover;
    height: 50%;
    width: 100%;
    border-radius: 3px; 
    object-position: center;
}

.contact-link:hover {
    color: #6c7074;
}

#contact-button {
    display: flex;
    justify-content: center;
    margin: 20px;
}

/*Contact Page -----------------------------------------------------*/

.contact-header {
    text-align: center;
    padding: 20px;
}

input, textarea {
    border-radius: 3px;
    border-width: 1px;
    border-style: solid;
}

.form-container {
    display: grid;
    grid-template-columns:  repeat(auto-fit, minmax(320px, 1fr));
    grid-auto-rows: auto;
    width: 80%;
    margin: 20px auto;
    gap: 20px;
    overflow: hidden;
    background-color: #f1f1f1;
    padding: 20px;
    border-radius: 3px;
}

#contact-form {
    display: flex;
    flex-direction: column;
    padding: 0 30px 30px 30px;
    gap: 10px;  
    border-radius: 3px;
}

label {
    padding: 10px 30px;
    font-size: 1.1rem;
}

.submit-button {
    width:fit-content;
    border: 1px solid #848c91;
    border-radius: 10px;
    padding: 5px;
    background-color: #fafafa;
}

.submit-button:hover {
    background-color: #848c91;
    color:#fafafa;  
}

iframe {
    object-fit: cover;
    height: 55%;
    width: 100%;
    border-radius: 3px;
}

.contact-info {
    background-color: #fcfcfc;
    border-radius: 3px;
    padding: 10px 20px;
    text-align: justify;
    font-size: 1.1rem;
    margin-bottom: 20px;
}

.contact-info p {
    text-align: left;
    padding: 5px 10px;
    margin-bottom: 10px;
}

.contact-info i {
    color:#848c91;
    font-size: 0.9rem;
    margin-right: 5px;
}

.timetable {
    background-color: #fcfcfc;
    margin-bottom: 20px;
    text-align: center;
    display: flex;
    justify-content: center;
}

#timetable-label {
    display:block;
    padding-bottom: 10px;
    margin-top: 10px;
    text-align: center;
}

/* Rounded corners tutorial -------------------------------------------*/
table {
    --border: 1px solid #848c916b;
    border-radius: 5px;
    border-spacing: 0;
    border-collapse: separate;
    border: var(--border);
    overflow: hidden;
   }

th, td {
    border: 1px solid #848c916b;
    padding: 5px 10px;
    text-align: center;
}

/* Gallery Page -------------------------------------------------------*/

.gallery {
    display: grid;
    grid-template-columns: repeat(10, 1fr);
    grid-template-rows: repeat(16, 5vw);
    justify-content: center;
    gap: 10px;
    width: 90%;
    margin: 20px auto;
    padding: 30px;
    background-color: #f1f1f1;
}

.gallery img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.gallery-img-1 {
    grid-column-start: 1;
    grid-column-end: 4;
    grid-row-start: 1;
    grid-row-end: 7;
}

.gallery-img-2 {
    grid-column-start: 4;
    grid-column-end: 8;
    grid-row-start: 1;
    grid-row-end: 5;
}

.gallery-img-3 {
    grid-column-start: 8;
    grid-column-end: 11;
    grid-row-start: 1;
    grid-row-end: 7;
}

.gallery-img-4 {
    grid-column-start: 4;
    grid-column-end: 8;
    grid-row-start: 5;
    grid-row-end: 7;
}

.gallery-img-5 {
    grid-column-start: 1;
    grid-column-end: 6;
    grid-row-start: 7;
    grid-row-end: 11;
}

.gallery-img-6 {
    grid-column-start: 6;
    grid-column-end: 11;
    grid-row-start: 7;
    grid-row-end: 11;
}

.gallery-img-7 {
    grid-column-start: 1;
    grid-column-end: 4;
    grid-row-start: 11;
    grid-row-end: 17;
}

.gallery-img-8 {
    grid-column-start: 4;
    grid-column-end: 8;
    grid-row-start: 11;
    grid-row-end: 14;
}

.gallery-img-9 {
    grid-column-start: 4;
    grid-column-end: 8;
    grid-row-start: 14;
    grid-row-end: 17;
}

.gallery-img-10 {
    grid-column-start: 8;
    grid-column-end: 11;
    grid-row-start: 11;
    grid-row-end: 17;
}


/* Media Queries - General ------------------------------------------------------*/

@media screen and (min-width: 420px) {
    .nav-home-page {
    display: none;
    }
}

@media screen and (max-width: 420px) {
    .navbar-brand {
        display: none;
     }
    
    footer i {
        padding: 5px 0;
        font-size: 0.8rem;
    }
}

@media (max-width: 768px) {
    .hero-image-main, .hero-image-classes, .hero-image-contact {
        min-height: 50vh;
        background-position:right;
    }

    h1, hr {
        display: none;
    }

    .hero-text {
        margin-top: 30px;
    }
}

/* Media Queries - Home Page ------------------------------------------------------*/

@media screen and (min-width: 1600px) {
    .home-page {
        width: 70%;
    }
}


@media screen and (max-width: 1200px) {
    .home-page {
        column-count: 1;
        margin: 20px auto;
        width: 80%;
    }

    .house-picture {
        transform: scale(0.8, 0.8);
    }

    .testimonials {
        column-count: 1;
    }
}

@media screen and (max-width: 420px) {
    .home-page {
        margin: 20px auto;
    }

    .image-column {
        margin: 20px auto;
    }

    .house-picture {
        padding: 20px;
        transform: scale(1, 1);
        object-fit: fill;
    }
}

/* Media Queries - Classes Page ------------------------------------------------------*/

@media screen and (min-width: 1200px) {
    .class-page-grid {
        width: 60%;
        margin: 50px;
    }
}

@media screen and (max-width: 480px) {
    .class-page-grid {
        width: 100%;
        gap: 10px;
        padding: 0;
        margin: 0;
    }

    .class-description {
        padding: 15px;
        overflow: auto;
    }

    .class-description h3 p {
        font-size: 1rem;
    }
}

/* Media Queries - Contact Page ------------------------------------------------------*/

@media screen and (max-width: 900px) {
    .contact-info p {
        padding: 0;
        text-align: left;
        font-size: 1rem;
    }
}

@media screen and (max-width: 768px) { 
    .timetable {
        transform: scale(0.8, 0.8);
    }

    .form-container {
        padding: 10px 10px;
        margin: auto;
    }
}

@media screen and (max-width: 420px) {
    .form-container {
        padding: 0;
        width: 100%;
    }

    .contact-form {
        padding: 10px;
    } 

    .contact-form label {
        font-size: 0.7rem;
    }

    .contact-info {
        font-size: 0.7rem;
    }

    .timetable {
        transform: scale(0.7, 0.7);
    }
}

/* Media Queries - Gallery Page ---------------------------------------------*/

@media screen and (max-width: 768px) {
    .gallery {
        display: block;
        column-count: 2;
        width: 100%;
        margin: 0;
    }
}

@media screen and (max-width: 420px) {
    .gallery {
        display: block;
        column-count: 1;
        width: 100%;
        margin: 0;
    }
}

